--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: mysql:latest
     container_name: mysql
     restart: always
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
     ports:
       - 3306:3306
     environment:
@@ -18,6 +20,8 @@ services:
     image: songkg7/web
     container_name: web
     platform: linux/amd64
+    depends_on:
+      - mysql
     ports:
       - 8080:8080
     networks:
